# CurseForge-API-CPP

./: .gitignore  CMakeLists.txt  README.md
include/: CurseFile.hpp  CurseFileDependency.hpp  CurseFileHash.hpp  CurseFileModule.hpp  CurseFileReleaseType.hpp  CurseFileStatus.hpp  CurseForgeAPI.hpp  CurseMod.hpp  CurseModAuthor.hpp  CurseModStatus.hpp  CurseModsSearchSortField.hpp  CurseSearchBuilder.hpp
src/: CurseCategory.cpp  CurseCategory.hpp  CurseEngine.cpp  CurseEngine.hpp  CurseErrors.cpp  CurseErrors.hpp  CurseFile.cpp  CurseFile.hpp  CurseFileDependency.cpp  CurseFileDependency.hpp  CurseFileHash.cpp  CurseFileHash.hpp  CurseFileIndex.cpp  CurseFileIndex.hpp  CurseFileModule.cpp  CurseFileModule.hpp  CurseFileRelationType.hpp  CurseForgeAPI.cpp  CurseForgeEngine.cpp  CurseForgeEngine.hpp  CurseHashAlgo.hpp  CurseMod.cpp  CurseMod.hpp  CurseModAsset.cpp  CurseModAsset.hpp  CurseModAuthor.cpp  CurseModAuthor.hpp  CurseModLinks.cpp  CurseModLinks.hpp  CurseModLoaderType.hpp  CurseModsSearchSortField.hpp  CurseSearchBuilder.cpp  CurseSearchBuilder.hpp  CurseSortableGameVersion.cpp  CurseSortableGameVersion.hpp  main.cpp
tests/: CMakeLists.txt  main.cpp
